# web

./: .env.keys  .gitignore  .mise.sh  .prettierrc.yml  .stylelintrc.js  biome.json  build.sh  ci.sh  coc-settings.json  conf  dev.sh  dist.sh  env.sh  package.json  settings.json  test.htm
com/: Auth.svelte  Captcha.svelte  Index.svelte  State.svelte  Tld.svelte  vite.config.js
docker/: .gitignore  docker-compose.yml  down.sh  nginx.yml  openresty.yml  ssl.sh  up.sh
docker/conf/nginx/: bash.sh  nginx.conf
docker/conf/nginx/conf/: hpc.conf
docker/conf/nginx/header/: 127.conf  _access.conf  expires-1.conf  proxy.conf
dom/: Auth.coffee  Box.coffee  Box.css  Captcha.js  Err.coffee  Focus.js  Toast.coffee  Toast.css  Wait.coffee  X.coffee  X.css  _.js
lib/: debounce.js  hpc.js  nowts.js  package.json  req.js  utf8d.js
lib/stream.test/: test.js
lib/stream.test/src/: main.rs
pug/: _.pug  demo.pug  test.pug
sh/: build.sh  dist.lib.sh  dom.js  env.sh  fmt.sh  minifyCss.js  minifyJs.js  srv.sh  wait-for-it.sh
srv/: mod.js  package.json
test/stream_server/: .gitignore  Cargo.toml  package.json  test.js
test/stream_server/src/: main.rs
