[package]
name = "astream_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["tracing", "macros"] }
bytes = "1.10.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
tokio-stream = "0.1.17"
